--- a/css/georgi.css
+++ b/css/georgi.css
@@ -24,6 +24,8 @@ h3 {
     font-weight: normal;
 }
 
+/*MOBIL*/
+
 .leftFood-header {
     margin-bottom: 2rem;
 }
@@ -45,17 +47,10 @@ h3 {
     margin-left: .5rem;
 }
 
-/*MOBIL*/
-
-@media(max-width: 767px) {
-    body {
-        background-color: blueviolet;
-    }
-}
 
 /*TABLET*/
 
-@media (min-width: 768px) and (max-width: 1023px) {
+@media (min-width: 768px) {
     body {
         background-color: darkorange;
     }
