--- a/css/alex.css
+++ b/css/alex.css
@@ -3,17 +3,89 @@
     box-sizing: border-box;
 }
 
-#template-header
-{
-    text-align: center;
-    
-    font-family: sans-serif;
-    
-    font-size: 4rem;
-}
+
 
 /*MOBIL*/
 
+.ideal-header
+{
+    margin-top: 2%;
+    
+    text-align: center;
+    
+    font-size: 3rem;
+    
+    font-family: sans-serif;
+    
+}
+
+.sc1
+{
+    position: relative;
+    height: 300px;
+    margin: 2%;
+    
+    -webkit-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);
+    
+    background-color: aliceblue;
+    
+    transition-duration: 0.3s;
+    animation-duration: 0.3s;
+    
+    animation-name: movedown;
+    animation-fill-mode: forwards;
+}
+
+.sc1:hover
+{
+    -webkit-box-shadow: 8px 8px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 8px 8px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 8px 8px 5px 0px rgba(0,0,0,0.75);
+    
+    transition-duration: 0.3s;
+    animation-duration: 0.3s;
+    
+    animation-name: moveup;
+    animation-fill-mode: forwards;
+    
+}
+.a1
+{
+    text-align: center;
+    
+    padding-top: 10%;
+    
+    font-family: sans-serif;
+    font-size: 2rem;
+}
+
+@keyframes moveup
+{
+    from
+    {
+        top: 0px;
+    }
+    
+    to
+    {
+        top: -5px;
+    }
+}
+
+@keyframes movedown
+{
+    from
+    {
+        top: 0px;
+    }
+    
+    to
+    {
+        top: 5px;
+    }
+}
 
 /*TABLET*/
 @media (min-width: 768px)
@@ -29,6 +101,6 @@
 {
     body
     {
-        background-color: crimson;
+        background-color: skyblue;;
     }  
 }
