--- a/css/alex.css
+++ b/css/alex.css
@@ -23,7 +23,7 @@
 {
     position: relative;
     height: 300px;
-    margin: 2%;
+    margin: 25px;
     
     -webkit-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);
@@ -55,7 +55,7 @@
 {
     text-align: center;
     
-    padding-top: 10%;
+    padding-top: 130px;
     
     font-family: sans-serif;
     font-size: 2rem;
