--- a/css/georgi.css
+++ b/css/georgi.css
@@ -1,14 +1,15 @@
+/* fonts */
+@font-face {
+    src: url('https://fonts.googleapis.com/css?family=Courgette');
+}
+@font-face {
+    src: url('https://fonts.googleapis.com/css?family=Lato');
+}
 * {
     box-sizing: border-box;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-weight: bold;
+    font-family: 'Lato', sans-serif;
+    font-size: 16px;
+    line-height: 24px;
 }
 
 h1 {
@@ -21,21 +22,40 @@ h2 {
 
 h3 {
     font-size: 1.5rem;
-    font-weight: normal;
 }
 
 /*MOBIL*/
-
+#leftFood-page{
+    background: linear-gradient(rgba(25,25,25,.7),rgba(25,25,25,.7)),url('http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,e_blur:500,w_1000/a_90/v1535048784/leftOvers/01-34-reasons-to-load-up-on-lemons-cutting-board.jpg');
+    background-size: cover;
+    background-position: center;
+}
 .leftFood-header {
     margin-bottom: 2rem;
 }
-
+.leftFood__mainHeading{
+    background: -webkit-linear-gradient(rgb(103, 255, 103), rgb(24, 207, 54));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-family: 'Courgette', cursive;
+    font-size: 2rem;
+    text-align: center;
+    margin:5vh 5vw 0 5vw;
+    line-height: 3rem;
+}
+.leftFood-section__heading{
+    font-family: 'Courgette', cursive;
+    color: rgb(207, 207, 207);
+    font-size: 1.5rem;
+}
 #leftFood-page .btn {
     color: black;
     border-radius: 5px;
     border: 1px solid black;
     padding: 0.3rem 2rem;
     text-decoration: none;
+    background: linear-gradient(rgb(103, 255, 103), rgb(24, 207, 54));
+    font-weight: bold;
 }
 
 .leftFood-section {
