--- a/source/georgi.scss
+++ b/source/georgi.scss
@@ -1,18 +1,9 @@
-/* fonts */
-
-@font-face {
-    font-family: Courgette;
-    src: url('https://fonts.googleapis.com/css?family=Courgette');
-}
-
-@font-face {
-    font-family: Lato;
-    src: url('https://fonts.googleapis.com/css?family=Lato');
-}
+@import "../source/fonts.scss";
+@import "colors.scss";
 
 * {
     box-sizing: border-box;
-    font-family: 'Lato', sans-serif;
+    font-family: $primary-font;
     font-size: 16px;
     line-height: 24px;
 }
@@ -31,41 +22,40 @@ h3 {
 
 /*MOBIL*/
 
-#leftFood-page {
+.ingredients {
     background: linear-gradient(rgba(25, 25, 25, .7), rgba(25, 25, 25, .7)), url('http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,e_blur:500,w_1000/a_90/v1535048784/leftOvers/01-34-reasons-to-load-up-on-lemons-cutting-board.jpg');
     background-size: cover;
     background-position: center;
 }
 
-.leftFood-header {
+.ingredients-header {
     margin-bottom: 2rem;
+
+    .ingredients__headline {
+        color: $green;
+        font-family: $secondary-font;
+        font-size: 2rem;
+        text-align: center;
+        margin: 5vh 5vw 0 5vw;
+        line-height: 3rem;
+    }
 }
 
-.leftFood-main{
+.ingredients-main{
     padding: 0 5vw;
 }
-.leftFood__mainHeadline {
-    background: -webkit-linear-gradient(rgb(103, 255, 103), rgb(24, 207, 54));
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    font-family: 'Courgette', cursive;
-    font-size: 2rem;
-    text-align: center;
-    margin: 5vh 5vw 0 5vw;
-    line-height: 3rem;
-}
 
-.leftFood-section {
+
+.ingredients-section {
     margin-bottom: 2.5rem;
 }
 
-.leftFood-section__list {
+.ingredients-section__list {
     margin-left: 1.5rem;
 }
 
-.leftFood-section__heading {
-    font-family: 'Courgette', cursive;
+.ingredients-section__heading {
+    font-family: $secondary-font;
     color: rgb(207, 207, 207);
     font-size: 1.5rem;
     margin-bottom: 1.5rem;
@@ -108,13 +98,13 @@ h3 {
     bottom:0px;
 }
 
-#leftFood-page .btn {
+.ingredients .btn {
     color: rgb(20, 20, 20);
     border-radius: 10px;
     border: 1px solid black;
     padding: 0.5rem 2rem;
     text-decoration: none;
-    background: linear-gradient(rgb(103, 255, 103), rgb(24, 207, 54));
+    background: $green;
     font-weight: bold;
     display: block;
     text-align: center;
